@@ -32,7 +32,7 @@ $versions['AUTHORS']='11306';
 $versions['ChangeLog']='';
 $versions['LICENSE.txt']='11584';
 $versions['README']='3848';
-$versions['Version.php']='16545';
+$versions['Version.php']='16551';
 $versions['add_photos_refresh.php']='16366';
 $versions['admin-page.php']='16282';
 $versions['albums.php']='16436';
@@ -309,31 +309,31 @@ $versions['java/GalleryRemoteAppletMini.jar']='';
 $versions['java/GalleryRemoteHTTPClient.jar']='';
 $versions['java/applet_img.jar']='';
 $versions['java/metadata-extractor-2.1.jar']='';
-$versions['js/byteCalculator.js']='15847';
+$versions['js/byteCalculator.js']='16551';
 $versions['js/client_sniff.js']='3038';
-$versions['js/cropper/builder.js']='15390';
-$versions['js/cropper/controls.js']='15390';
-$versions['js/cropper/cropper.css']='15390';
-$versions['js/cropper/cropper.js']='15390';
-$versions['js/cropper/cropperInit.js']='15390';
-$versions['js/cropper/dragdrop.js']='15390';
-$versions['js/cropper/effects.js']='15390';
+$versions['js/cropper/builder.js']='16551';
+$versions['js/cropper/controls.js']='16551';
+$versions['js/cropper/cropper.css']='16551';
+$versions['js/cropper/cropper.js']='16551';
+$versions['js/cropper/cropperInit.js']='16551';
+$versions['js/cropper/dragdrop.js']='16551';
+$versions['js/cropper/effects.js']='16551';
 $versions['js/cropper/marqueeHoriz.gif']='';
 $versions['js/cropper/marqueeVert.gif']='';
-$versions['js/cropper/prototype.js']='15390';
-$versions['js/cropper/scriptaculous.js']='15390';
-$versions['js/cropper/slider.js']='15390';
-$versions['js/cropper/unittest.js']='15390';
+$versions['js/cropper/prototype.js']='16551';
+$versions['js/cropper/scriptaculous.js']='16551';
+$versions['js/cropper/slider.js']='16551';
+$versions['js/cropper/unittest.js']='16551';
 $versions['js/fitToWindow.js.php']='15631';
 $versions['js/imagemap.js']='15030';
 $versions['js/multiInput.js.php']='13850';
 $versions['js/multifile.js.php']='15552';
-$versions['js/progressbar.js']='15847';
+$versions['js/progressbar.js']='16551';
 $versions['js/sectionTabs.js.php']='15552';
 $versions['js/selectBoxHandling.js']='15347';
 $versions['js/toggle.js']='16543';
 $versions['js/wz_jsgraphics.js']='15847';
-$versions['js/wz_tooltip.js']='15847';
+$versions['js/wz_tooltip.js']='16551';
 $versions['js/yui/TODO']='15390';
 $versions['js/yui/animation-min.js']='15390';
 $versions['js/yui/autocomplete-min.js']='15390';
@@ -451,7 +451,7 @@ $versions['lib/url.php']='15932';
 $versions['lib/usage.php']='16344';
 $versions['lib/valchecks.php']='15631';
 $versions['lib/voting.php']='15631';
-$versions['manifest.inc']='15631';
+$versions['manifest.inc']='16551';
 $versions['new_password.php']='15649';
 $versions['nls.php']='15631';
 $versions['platform/fs_unix.php']='16371';
@@ -533,7 +533,7 @@ $versions['setup/mod_rewrite.template']='5352';
 $versions['setup/php_value.template']='7649';
 $versions['setup/php_value_ok.php']='14850';
 $versions['setup/phpinfo.php']='15631';
-$versions['setup/session_test.php']='15826';
+$versions['setup/session_test.php']='16551';
 $versions['setup/welcome.inc']='13903';
 $versions['setup/write.inc']='15631';
 $versions['skins/bars002/css/screen.css.default']='14036';
